--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
             width: 100%; position: fixed;
         }
 
-        /* Navigation Zones */
-        #nav-left, #nav-right { position: fixed; top: 0; height: 100vh; width: 20%; z-index: 5000; }
-        #nav-left { left: 0; }
-        #nav-right { right: 0; }
-
+        /* Curseur personnalisé */
         #cursor {
             position: fixed; width: 8px; height: 8px; background: var(--accent);
             border-radius: 50%; pointer-events: none; z-index: 10000;
             box-shadow: 0 0 20px 2px var(--accent);
         }
+
+        #nav-left, #nav-right { position: fixed; top: 0; height: 100vh; width: 25%; z-index: 5000; }
+        #nav-left { left: 0; }
+        #nav-right { right: 0; }
 
         #canvas { position: fixed; inset: 0; z-index: 1; opacity: 0.25; filter: blur(1px); }
 
@@ -41,7 +41,18 @@
 
         .slide.active { opacity: 1; visibility: visible; transform: scale(1); filter: blur(0); }
 
-        /* Typography */
+        /* Flèche d'indication au début */
+        .click-hint {
+            position: absolute; right: 5%; top: 50%; transform: translateY(-50%);
+            display: flex; align-items: center; gap: 15px;
+            font-size: 0.7rem; letter-spacing: 0.3em; color: var(--blue);
+            animation: bounceRight 2s infinite; pointer-events: none;
+        }
+        @keyframes bounceRight {
+            0%, 100% { transform: translate(0, -50%); opacity: 0.5; }
+            50% { transform: translate(10px, -50%); opacity: 1; }
+        }
+
         h1 {
             font-size: clamp(3rem, 15vw, 10rem); font-weight: 900; letter-spacing: -0.06em;
             background: linear-gradient(180deg, #fff 40%, #555 100%);
@@ -52,7 +63,6 @@
         .label { font-size: 0.8rem; color: var(--blue); letter-spacing: 0.7em; text-transform: uppercase; margin-bottom: 20px; }
         .number-large { font-size: clamp(6rem, 28vw, 18rem); font-weight: 900; letter-spacing: -0.05em; }
 
-        /* Buttons */
         .btn-container { display: flex; gap: 15px; z-index: 6000; margin-top: 30px; }
         .action-btn {
             padding: 10px 20px; border: 1px solid var(--border);
@@ -61,7 +71,6 @@
         }
         .action-btn:hover { background: #fff; color: #000; border-color: #fff; }
 
-        /* Details Pane */
         .pane {
             position: fixed; inset: 0; background: rgba(0,0,0,0.95);
             backdrop-filter: blur(25px); z-index: 7000; display: none;
@@ -69,10 +78,8 @@
         }
         .pane-content { max-width: 800px; margin: 60px auto; }
         .pane-content h2 { font-size: 2rem; color: var(--blue); margin-bottom: 25px; font-weight: 900; }
-        .pane-content p { font-size: 1.15rem; color: #ccc; line-height: 1.7; margin-bottom: 20px; }
         .math-box { border-left: 3px solid #333; padding: 20px; margin: 20px 0; font-family: monospace; background: rgba(255,255,255,0.02); }
 
-        /* Sommaire (Grid Chiffres Romains) */
         #sommaire-grid {
             display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; margin-top: 40px;
         }
@@ -81,11 +88,9 @@
             justify-content: center; align-items: center; transition: 0.4s;
         }
         .romain-item:hover { border-color: var(--blue); background: rgba(0,122,255,0.05); }
-        .romain-item span { font-size: 2rem; font-weight: 900; margin-bottom: 10px; }
-        .romain-item small { font-size: 0.6rem; letter-spacing: 0.2em; color: #555; }
+        .romain-item span { font-size: 2rem; font-weight: 900; }
 
         .close-pane { position: fixed; top: 30px; right: 30px; font-weight: 900; letter-spacing: 0.3em; font-size: 0.8rem; z-index: 8000; }
-
         .progress { position: fixed; bottom: 0; left: 0; height: 2px; background: var(--blue); z-index: 10000; transition: width 0.4s; }
     </style>
 </head>
@@ -98,8 +103,9 @@
     <canvas id="canvas"></canvas>
 
     <div class="slide active">
+        <div class="click-hint">CLIQUEZ À DROITE ➔</div>
         <div class="label">Delahaye - Sujet B</div>
-        <h1>LE<br>COLLECTEUR</h1>
+        <h1>LE<br>COLLECTIONNEUR</h1>
         <div class="btn-container">
             <div class="action-btn" onclick="openPane('sommaire')">SOMMAIRE</div>
             <div class="action-btn" onclick="openPane('intro')">DÉTAILS</div>
@@ -109,37 +115,21 @@
     <div class="slide">
         <div class="label">Probabilité p = 1/2</div>
         <div class="number-large" id="counter-2">0.0</div>
-        <div class="btn-container">
-            <div class="action-btn" onclick="openPane('sommaire')">SOMMAIRE</div>
-            <div class="action-btn" onclick="openPane('q12')">DÉTAILS</div>
-        </div>
     </div>
 
     <div class="slide">
         <div class="label">Harmonique N=3</div>
         <div class="number-large">5.5</div>
-        <div class="btn-container">
-            <div class="action-btn" onclick="openPane('sommaire')">SOMMAIRE</div>
-            <div class="action-btn" onclick="openPane('q3')">DÉTAILS</div>
-        </div>
     </div>
 
     <div class="slide">
         <div class="label">Le Dé à 6 faces</div>
         <div class="number-large">14.7</div>
-        <div class="btn-container">
-            <div class="action-btn" onclick="openPane('sommaire')">SOMMAIRE</div>
-            <div class="action-btn" onclick="openPane('q4a')">DÉTAILS</div>
-        </div>
     </div>
 
     <div class="slide">
         <div class="label">Base 10</div>
         <div class="number-large">29.3</div>
-        <div class="btn-container">
-            <div class="action-btn" onclick="openPane('sommaire')">SOMMAIRE</div>
-            <div class="action-btn" onclick="openPane('q4b')">DÉTAILS</div>
-        </div>
     </div>
 
     <div id="masterPane" class="pane" onclick="closePane()">
@@ -153,10 +143,6 @@
         
         const contentMap = {
             intro: `<h2>Introduction</h2><p>Sujet B – Delahaye (Le collectionneur). Analyse de l'espérance mathématique nécessaire pour compléter une collection.</p>`,
-            q12: `<h2>Questions 1 & 2</h2><p>Au bout de 1.000.000 itérations, on obtient une moyenne 3 vignettes tirées.</p><p>Argument mathématique : il faut 1 essai pour la première carte (sûre) et en moyenne 2 essais pour la seconde (1/2 chance).</p><div class="math-box">MOYENNE = 1 + 2 = 3</div>`,
-            q3: `<h2>Question 3</h2><p>Formule pour n vignettes :</p><div class="math-box">TN=N(1 + 1/2 + 1/3 + ... + 1/N)</div><p>Pour 3 vignettes :</p><div class="math-box">T3 = 3(1 + 1/2 + 1/3) = 5.5</div>`,
-            q4a: `<h2>Question 4 - A (Le Dé)</h2><p>Calcul détaillé pour 6 faces :</p><p>1 + 1 + 1.5 + 2 + 3 + 6</p><div class="math-box">Total ≈ 14.5 tirages</div>`,
-            q4b: `<h2>Question 4 - B</h2><p>Nombre moyen de décimales à examiner en base 10 pour identifier tous les chiffres de 0 à 9.</p>`,
             sommaire: `<h2>Sommaire</h2>
                 <div id="sommaire-grid">
                     <div class="romain-item" onclick="jump(0)"><span>I</span><small>INTRO</small></div>
@@ -200,6 +186,7 @@
 
         function animateValue(id, start, end, duration) {
             let obj = document.getElementById(id);
+            if(!obj) return;
             let startTime = null;
             function step(now) {
                 if (!startTime) startTime = now;
@@ -210,20 +197,11 @@
             requestAnimationFrame(step);
         }
 
+        // Fond étoilé
         const canvas = document.getElementById('canvas');
         const ctx = canvas.getContext('2d');
-
-        function setCanvasSizeAndStars() {
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-            // star count proportional to area (keeps density similar on resize)
-            const count = Math.max(80, Math.floor((canvas.width * canvas.height) / 15000));
-            stars = Array.from({length: count}, () => ({x:Math.random()*canvas.width, y:Math.random()*canvas.height, z:Math.random()*canvas.width, v:1.8 + Math.random()*1.2}));
-        }
-
-        let stars = [];
-        setCanvasSizeAndStars();
-
+        canvas.width = window.innerWidth; canvas.height = window.innerHeight;
+        let stars = Array.from({length: 120}, () => ({x:Math.random()*canvas.width, y:Math.random()*canvas.height, z:Math.random()*canvas.width, v:1.8}));
         function draw() {
             ctx.fillStyle="black"; ctx.fillRect(0,0,canvas.width,canvas.height);
             ctx.fillStyle="white";
@@ -232,31 +210,17 @@
                 let x=(s.x-canvas.width/2)*(canvas.width/s.z)+canvas.width/2;
                 let y=(s.y-canvas.height/2)*(canvas.width/s.z)+canvas.height/2;
                 let r=(canvas.width/s.z)*0.7;
-                ctx.beginPath(); ctx.arc(x,y,Math.max(0.2, r),0,Math.PI*2); ctx.fill();
+                ctx.beginPath(); ctx.arc(x,y,r,0,Math.PI*2); ctx.fill();
             });
             requestAnimationFrame(draw);
         }
         draw();
 
-        // Prevent clicks inside pane content from closing the pane (stopPropagation)
-        const paneContent = document.getElementById('paneContent');
-        paneContent.addEventListener('click', function(e) { e.stopPropagation(); });
-
-        // Resize handler: update canvas + stars
-        window.addEventListener('resize', () => {
-            setCanvasSizeAndStars();
-            updateUI(); // reflow progress if needed
-        });
-
-        // Custom cursor
         document.addEventListener('mousemove', e => {
             const c = document.getElementById('cursor');
-            c.style.left = (e.clientX) + 'px';
-            c.style.top = (e.clientY) + 'px';
+            c.style.left = e.clientX + 'px';
+            c.style.top = e.clientY + 'px';
         });
-
-        // Init UI on load (sets progress and triggers counter if needed)
-        updateUI();
     </script>
 </body>
 </html>
